--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,28 +1,28 @@
 {% extends 'base.html' %}
 {% block title %} Записи сообщества; {{ group.title }}{% endblock %}
-  {% block content %}
+{% block content %}
   <div class="container py-5">
     <h1>{{ group.title }}</h1>
     <p>
-      Записи сообщества; {{ group.description|linebreaks }}
+      Записи сообщества; {{ group.description|linebreaks }}<hr>
     </p>
     {% for post in page_obj %}
-    <article>
-      <ul>
-        <li>
-          Автор: {{ post.author }} 
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>      
-    <p>
-      {{ post.text|linebreaks }}
-    </p>
-      {% if not forloop.last %}<hr>{% endif %}
-    </article>  
+      <article>
+        <ul>
+          <li>
+            Автор: {{ post.author }} 
+          </li>
+          <li>
+            Дата публикации: {{ post.pub_date|date:"d E Y" }}
+          </li>
+        </ul>      
+      <p>
+        {{ post.text|linebreaks }}
+      </p>
+        {% if not forloop.last %}<hr>{% endif %}
+      </article>  
     {% endfor %}
     {% include 'includes/paginator.html' %}
     <hr>
   </div>  
-  {% endblock %} 
+{% endblock %} 
