--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -9,7 +9,6 @@
       <ul>
         <li>
           Автор: {{ post.author }}
-          <a href="{% url 'posts:profile' post.author %}"> все посты пользователя</a>
         </li>
         <li>
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
@@ -19,8 +18,8 @@
         {{ post.text|linebreaks }}
       </p>
       {% if post.group %}
-        <a href="{% url 'posts:group_list' post.group.slug %}"> Все записи группы {{ post.group.title }}</a> 
-        {% if not forloop.last %}<hr>{% endif %}
+      {% include 'includes/post_card.html' %}  
+      {% if not forloop.last %}<hr>{% endif %}
       {% endif %}  
     </article>  
     {% endfor %}
