--- a/yatube/templates/posts/post_create.html
+++ b/yatube/templates/posts/post_create.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}
-{% with request.resolver_match.view_name as view_name %}
-{% if view_name == 'posts:post_create' %}
-Новый пост
-{% else %}
+{% if form.instance.pk %}
 Редактор поста
+{% else %}
+Новый пост
 {% endif %}
-{% endwith %}
 {% endblock %}  
 {% block content %}
 <div class="container py-5">
@@ -14,14 +12,14 @@
     <div class="col-md-8 p-5">
       <div class="card">
         <div class="card-header">
-          {% if is_edit %}      
+          {% if form.instance.pk %}      
             Редактируемый пост
           {% else %}
             Новый пост
           {% endif %}                 
         </div>
         <div class="card-body">        
-          <form method="post" action="{% if is_edit %}{% url 'posts:post_edit' post.id %}
+          <form method="post" action="{% if form.instance.pk %}{% url 'posts:post_edit' form.instance.pk %}
           {% else %}{% url 'posts:post_create' %}{% endif %}">
           {% csrf_token %}            
             <div class="form-group row my-3 p-3">
@@ -31,7 +29,7 @@
               </label>  
               {{ form.text }}              
               <small id="id_text-help" class="form-text text-muted">
-                {% if is_edit %}
+                {% if form.instance.pk %}
                   Текст редактируемого поста
                 {% else %}
                   Текст нового поста
@@ -49,7 +47,7 @@
             </div>
             <div class="d-flex justify-content-end">
               <button type="submit" class="btn btn-primary">
-                {% if is_edit %}
+                {% if form.instance.pk %}
                   Сохранить
                 {% else %}
                   Добавить
