--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,30 +1,27 @@
 {% extends "base.html" %}
 {% block title %}
-Профайл пользователя {{ user.username }}
+  Профайл пользователя {{ user.username }}
 {% endblock %}
 {% block content %}
-<div class="container ru-5">   
-  <h2>Все посты пользователя {{ author.get_full_name }}</h2>
-  <h3>Всего постов: {{ post_count }} </h3>
-  {% for post in page_obj %}
-  <article>
-    <ul>
-      <li>
-        Автор: {{ post.author }}
-        <a href="{% url 'posts:profile' post.author %}"> все посты пользователя </a>
-      </li>
-      <li>
-        Дата публикации: {{ post.pub_date|date:"d E Y" }}
-      </li>
-    </ul>      
-    <p>{{ post.text|linebreaksbr }}</p>
-  <a href="{% url 'posts:post_detail' post.id %}"> подробная информация </a>
-  </article>
-  {% if post.group %}   
-  <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы, {{ post.group.slug }}</a>
-  {% endif %} 
-  {% if not forloop.last %}<hr>{% endif %}
-  {% endfor %} 
-  {% include 'includes/paginator.html' %}
-</div>  
+  <div class="container ru-5">   
+    <h2>Все посты пользователя {{ author.get_full_name }}</h2>
+      <h3>Всего постов: {{ author.posts.count }} </h3>
+      {% for post in page_obj %}
+      <ul>
+        <li>
+          Автор: {{ post.author }}.
+        </li>
+        <li>
+          Дата публикации: {{ post.pub_date|date:"d E Y" }}
+        </li>
+        <li>
+            Текст поста:<br>
+           {{ post.text|linebreaksbr }}
+          </li>
+      </ul>    
+      {% include 'includes/post_card.html' %} 
+      {% if not forloop.last %}<hr>{% endif %}
+      {% endfor %} 
+    {% include 'includes/paginator.html' %}
+  </div>  
 {% endblock %}
