--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -11,13 +11,7 @@
         <div class="card-body"> 
           <form method="post" action="{% url 'users:password_reset_form' %}">
             {% csrf_token %}
-            <div class="form-group row my-3 p-3">
-              <label for="id_email">
-                Адрес электронной почты
-                <span class="required text-danger">*</span>
-              </label>    
-              <input type="email" name="email" maxlength="254" class="form-control" required id="id_email">
-            </div>
+            {% include 'includes/iter_form.html' %}
             <div class="col-md-6 offset-md-4">
               <button type="submit" class="btn btn-primary">
                 Сбросить пароль
