--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ title }}{% endblock %}
+{% block title %} {{ post }} {% endblock %}
 {% block content %}
   <div class="row">
     <aside class="col-12 col-md-3">
