--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,23 +5,11 @@
 {% block content %}
   <div class="container ru-5">   
     <h2>Все посты пользователя {{ author.get_full_name }}</h2>
-      <h3>Всего постов: {{ author.posts.count }} </h3>
-      {% for post in page_obj %}
-      <ul>
-        <li>
-          Автор: {{ post.author }}.
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-        <li>
-            Текст поста:<br>
-           {{ post.text|linebreaksbr }}
-          </li>
-      </ul>    
-      {% include 'includes/post_card.html' %} 
+        <h3>Всего постов: {{ author.posts.count }} </h3>
+        {% for post in page_obj %}
+      {% include 'posts/includes/post_card.html' with show_profile=True %} 
       {% if not forloop.last %}<hr>{% endif %}
       {% endfor %} 
-    {% include 'includes/paginator.html' %}
-  </div>  
+    {% include 'posts/includes/paginator.html' %}
+  </div> 
 {% endblock %}
