--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,5 +1,4 @@
 {% load static %}
-<header>
 <nav class="navbar navbar-light" style="background-color: lightskyblue">
   <div class="container">
     <a class="navbar-brand" href="{% url 'posts:index' %}">
@@ -28,8 +27,9 @@
       <li class="nav-item"> 
         <a class="nav-link link-light" href="{% url 'users:logout' %}">Выйти</a>
       </li>
-      <li>
-       <a href="{% url 'posts:profile' user.username %}">Пользователь: {{ user.username }}</a>
+      <li class="nav-item">
+        <a class="nav-linc {% if view_name == 'posts:profile' %}active{% endif %}"
+          href="{% url 'posts:profile' user.username %}">Пользователь: {{ user.username }}</a>
       </li>
       {% else %}
       <li class="nav-item"> 
