--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -7,26 +7,10 @@
       <h4>Записи сообщества; {{ group.description|linebreaks }}</h4><hr>
     </p>
     {% for post in page_obj %}
-      <article>
-        <ul>
-          <li>
-            Автор: {{ post.author }} 
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>
-        <ul>
-          <li>
-              Текст поста:<br>
-              {{ post.text|linebreaks }}
-          </li>
-        </ul>    
-        {% include 'includes/post_card.html' %} 
-        {% if not forloop.last %}<hr>{% endif %}
-      </article> 
+    {% include 'posts/includes/post_card.html' with show_group_list=True %} 
+      {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
-    {% include 'includes/paginator.html' %}
+    {% include 'posts/includes/paginator.html' %}
     <hr>
   </div>  
 {% endblock %} 
