--- a/yatube/templates/posts/post_create.html
+++ b/yatube/templates/posts/post_create.html
@@ -1,63 +1,42 @@
 {% extends 'base.html' %}
 {% block title %}
-{% if form.instance.pk %}
-Редактор поста
-{% else %}
-Новый пост
-{% endif %}
+  {% if form.instance.pk %}
+  Редактор поста
+  {% else %}
+  Новый пост
+  {% endif %}
 {% endblock %}  
 {% block content %}
-<div class="container py-5">
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="card">
-        <div class="card-header">
-          {% if form.instance.pk %}      
-            Редактируемый пост
-          {% else %}
-            Новый пост
-          {% endif %}                 
-        </div>
-        <div class="card-body">        
-          <form method="post" action="{% if form.instance.pk %}{% url 'posts:post_edit' form.instance.pk %}
-          {% else %}{% url 'posts:post_create' %}{% endif %}">
-          {% csrf_token %}            
-            <div class="form-group row my-3 p-3">
-              <label for="id_text">
-                Текст поста
-                <span class="required text-danger" >*</span>                  
-              </label>  
-              {{ form.text }}              
-              <small id="id_text-help" class="form-text text-muted">
-                {% if form.instance.pk %}
-                  Текст редактируемого поста
-                {% else %}
-                  Текст нового поста
-                {% endif %}    
-              </small>                  
-            </div>            
-            <div class="form-group row my-3 p-3">
-              <label for="id_group">
-                Группа                 
-              </label>
-              {{ form.group }}
-              <small id="id_group-help" class="form-text text-muted">
-                Группа, к которой будет относиться пост
-              </small>
-            </div>
-            <div class="d-flex justify-content-end">
-              <button type="submit" class="btn btn-primary">
-                {% if form.instance.pk %}
-                  Сохранить
-                {% else %}
-                  Добавить
-                {% endif %}   
-              </button>
-            </div>
-          </form>
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 p-5">
+        <div class="card">
+          <div class="card-header">
+            {% if form.instance.pk %}      
+              Редактируемый пост
+            {% else %}
+              Новый пост
+            {% endif %}                 
+          </div>
+          <div class="card-body">
+            {% include 'includes/form_errors.html' %}        
+            <form method="post" action="{% if form.instance.pk %}{% url 'posts:post_edit' form.instance.pk %}
+            {% else %}{% url 'posts:post_create' %}{% endif %}">
+            {% csrf_token %}            
+              {% include 'includes/iter_form.html' %}
+              <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-primary">
+                  {% if form.instance.pk %}
+                    Сохранить
+                  {% else %}
+                    Добавить
+                  {% endif %}   
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>   
+  </div>   
 {% endblock %}
