--- a/yatube/templates/includes/iter_form.html
+++ b/yatube/templates/includes/iter_form.html
@@ -5,7 +5,8 @@
   aria-required="true"
 {% else %}
   aria-required="false"
-{% endif %}>
+{% endif %}
+>
 <label for="{{ field.id_for_label }}">
   {{ field.label }}
     {% if field.field.required %}
