--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -3,14 +3,13 @@
 {% block title %}Технологии{% endblock %}
 {% block content %}
 {% comment %} Колонки с отступом сверху и снизу {% endcomment %}
-<div class="row">
+<div class="container py-5">
   <h1>Вот что я умею</h1>
   {% comment %}
     Боковой блок со списком технологий 
     Займет всю ширину блока на мобильном
     и 25% при размерах экрана ≥768px
   {% endcomment %}
-  <aside class="col-12 col-md-3">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
         Python
@@ -19,7 +18,6 @@
         Django
       </li>
     </ul>
-  </aside>
   {% comment %}
     Статья  
     Займет всю ширину блока на мобильном
