--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -8,6 +8,9 @@
     </a>
     {% with request.resolver_match.view_name as view_name %}
     <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link {% if view_name == 'posts:index' %}active{% endif %}"
+          href="{% url 'posts:index' %}">Главная</a>
       <li class="nav-item"> 
         <a class="nav-link {% if view_name == 'about:author' %}active{% endif %}" 
           href="{% url 'about:author' %}">Об авторе</a>
