--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,16 +1,24 @@
 {% extends 'base.html' %}
 {% block title %} Записи сообщества; {{ group }} {% endblock %}
 {% block content %}
+{% load thumbnail %}
   <div class="container py-5">
     <h1>{{ group.title }}</h1>
     <p>
       <h4>Записи сообщества; {{ group.description|linebreaks }}</h4><hr>
     </p>
+    <ul>
+      <li>
+        {% thumbnail post.image "960x650" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
+      </li>
+    </ul>    
     {% for post in page_obj %}
       {% include 'posts/includes/post_card.html' with show_group_list=True %} 
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     {% include 'posts/includes/paginator.html' %}
     <hr>
-  </div>  
+  </div>
 {% endblock %} 
