--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% block title %} {{ post }} {% endblock %}
 {% block content %}
+{% load thumbnail %}
   <div class="row">
     <aside class="col-12 col-md-3">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
           Дата публикации: {{ post.pub_date|date:"d E Y" }} 
         </li>
+        {% thumbnail post.image "960x650" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
           {% if post.group %}
         <li class="list-group-item">
           Группа: {{ post.group }}
@@ -18,7 +22,7 @@
           </a>
         </li>
         <li class="list-group-item">
-          Автор: {{ post.author }},  id: {{ post.id }}
+          Автор: {{ post.author.get_full_name }},  id: {{ post.id }}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Всего постов автора:  <span >{{ post.author.posts.count }}</span>
